// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`generateTableChildren generates <va-table-row> React children> 1`] = `
<va-table-row>
  <span>
    1
  </span>
  <span>
    Michael
  </span>
  <span>
    Management
  </span>
</va-table-row>
`;

exports[`generateTableChildren generates <va-table-row> React children> 2`] = `
<va-table-row>
  <span>
    10
  </span>
  <span>
    Toby
  </span>
  <span>
    HR
  </span>
</va-table-row>
`;

exports[`generateTableChildren generates <va-table-row> React children> 3`] = `
<va-table-row>
  <span>
    25
  </span>
  <span>
    Jim
  </span>
  <span>
    Sales
  </span>
</va-table-row>
`;
